--- a/index.html
+++ b/index.html
@@ -4,31 +4,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <title>Amaliyot</title>
   </head>
   <body>
-    <div class="container">
-      <form id="form" class="w-full d-flex flex-column">
-        <label for="title" class="mt-3" style="font-weight: 600"
-          >Enter title</label
-        >
-        <input type="text" id="title" class="form-control mb-2" />
-        <button type="submit" id="btn-add" class="btn btn-primary w-full">
-          Add
-        </button>
-      </form>
+    <div class="container d-flex w-full gap-4">
+      <div class="w-50">
+        <form id="form" class="d-flex flex-column">
+          <label for="title" class="mt-3" style="font-weight: 600"
+            >Enter title</label
+          >
+          <input id="title" type="text" class="form-control mb-2" />
+          <button
+            type="submit"
+            id="btn-add"
+            class="btn btn-primary w-full mb-5"
+          >
+            Add
+          </button>
+        </form>
 
-      <div class="wrapper"></div>
+        <div class="wrapper"></div>
+      </div>
+
+      <div class="card w-50" style="height: fit-content; margin-top: 40px">
+        <div class="card-header"><h3>Liked titles:</h3></div>
+        <div class="card-body">
+          <div class="card mt-4">
+            <div class="card-body" style="font-weight: 600"></div>
+            <div class="card-footer">
+              <button class="btn btn-danger">delete</button>
+              <button class="btn btn-warning">edit</button>
+              <button class="btn btn-info">copy</button>
+              <button class="btn btn-light border,">back</button>
+            </div>
+          </div>
+        </div>
+        <div class="card-footer d-flex w-full">
+          <button class="btn btn-danger w-full" style="width: 100%">
+            Clear all
+          </button>
+        </div>
+      </div>
     </div>
 
     <script src="./data.js"></script>
-    <script src="./script.js"></script>
+    <script src="./app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
