--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- ----- Bismillah ---- -->
+----- Bismillah ----
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -38,10 +38,11 @@
           <div class="card mt-4">
             <div class="card-body" style="font-weight: 600"></div>
             <div class="card-footer">
-              <button class="btn btn-danger">delete</button>
-              <button class="btn btn-warning">edit</button>
-              <button class="btn btn-info">copy</button>
-              <button class="btn btn-light border,">back</button>
+              <button class="btn btn-danger">Delete</button>
+              <button class="btn btn-warning">Edit</button>
+              <button class="btn btn-info">Copy</button>
+              <button class="btn btn-light border">Back</button>
+              <button class="btn btn-light border">Like</button>
             </div>
           </div>
         </div>
