--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
------ Bismillah ----
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -34,20 +33,11 @@
 
       <div class="card w-50" style="height: fit-content; margin-top: 40px">
         <div class="card-header"><h3>Liked titles:</h3></div>
-        <div class="card-body">
-          <div class="card mt-4">
-            <div class="card-body" style="font-weight: 600"></div>
-            <div class="card-footer">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-warning">Edit</button>
-              <button class="btn btn-info">Copy</button>
-              <button class="btn btn-light border">Back</button>
-              <button class="btn btn-light border">Like</button>
-            </div>
-          </div>
+        <div class="card-body" id="liked-wrapper">
+          
         </div>
         <div class="card-footer d-flex w-full">
-          <button class="btn btn-danger w-full" style="width: 100%">
+          <button id="clear-all" class="btn btn-danger w-full" style="width: 100%">
             Clear all
           </button>
         </div>
